# Video-Depth-Anything

./: .coverage.636f8bfcde6c.4202.XwIoUvwx  .gitignore  README.md  pyproject.toml  run.py
metric_depth/: README.md
tests/: __init__.py  conftest.py  test_setup_validation.py
video_depth_anything/: video_depth.py
