[project]
name = "video-depth-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "decord>=0.6.0",
    "easydict>=1.13",
    "einops==0.4.1",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "openexr==3.3.1",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "xformers>=0.0.30",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
